2011-10-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSHost.m: Update to use inet_pton() and inet_ntop() and to
	understand IPV6 addresses.
	* Source/GSNetwork.h: New private functions to work with the internals
	of a sockaddr irrespective of whether it's IP v4 or v6
	* Source/GSSocketStream.h: Move a declaration to GSNetwork.h
	* Source/GSSocketStream.m: Use new functions.
	* Source/NSSocketPort.m: Change to be IP v4/v6 agnostic
	* Source/NSMessagePort.m: Fix header include order.
	* Source/GSFileHandle.m: Changes to be IP v4/v6 agnostic
	* Headers/GNUstepBase/GSFileHandle.h: make setter use sockaddr type
	rather than sockaddr_in so we can use it for ipv6

2011-10-03  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSData.m (-initWithCoder:, -encodeWithCoder): Correct
	keyed encoding/decoding.

2011-10-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSFileManager.h
	* Source/NSFileManager.m
	* Tests/base/NSFileManager/general.m
	* Headers/Foundation/NSUserDefaults.h
	* Source/NSUserDefaults.m
	* Tests/base/NSUserDefaults/basic.m
	Add a few newer OSX methods for compatibility.

2011-10-01  Niels Grewe <niels.grewe@halbordnung.de>

        * Source/NSXMLNode.m: Properly implement -initWithKind: initializer.
        Stub out some tree traversal stuff.
	* Tests/base/NSXMLNode/basic.m: Fix test.

	Initial work on NSXMLNode.

2011-10-01  Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/base/NSXMLNode/children.m: Test for child de-/re-attachment
	behaviour.

2011-09-29  julian <julian@corecode.at>

	* Source/NSBundle.m: ([objectForInfoDictionaryKey:])
	Add missing one-line implementation.
	
2011-09-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumberFormatter.m: Check for _C_BOOL definition.

2011-09-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSUserDefaults.m:
	- Refactoring of the code to read the system language list
	  into a separate function, systemLanguages().